#
#  Copyright
#


hppDocdir = $(datadir)/doc/hppDoc

nobase_dist_hppDoc_DATA= \
	header.html \
	footer.html \
	package.css \
	pictures/footer.jpg \
	figures/archi.png  \
	figures/kppInterfaceWalk.png \
	pictures/ftv2blank.png \
	pictures/ftv2doc.png \
	pictures/ftv2folderclosed.png \
	pictures/ftv2folderopen.png \
	pictures/ftv2lastnode.png \
	pictures/ftv2link.png \
	pictures/ftv2mlastnode.png \
	pictures/ftv2mnode.png \
	pictures/ftv2node.png \
	pictures/ftv2plastnode.png \
	pictures/ftv2pnode.png \
	pictures/ftv2vertline.png \
	pictures/graph_legend.png \
	pictures/tab_b.gif \
	pictures/tab_l.gif \
	pictures/tab_r.gif

dist_hppDoc_DATA= \
	html/hppdoc_autotools.html

hppDoc_DATA=\
	html/hppdoc_development.html	\
	html/main.html			\
	html/algorithm.html		\
	html/hppdoc_howtoinstall.html	\
	html/tree.html			\
	html/corba.html			\
	html/index.html			\
	html/kppInterface.html

slam3DPlannerdir = $(datadir)/doc/hppDoc/slam3DPlanner
slam3DPlanner_DATA = slam3DPlanner/main.html

hppHRPPlannerdir = $(datadir)/doc/hppDoc/hppHRPPlanner
hppHRPPlanner_DATA = hppHRPPlanner/main.html

hppPythondir = $(datadir)/doc/hppDoc/hppPython
hppPython_DATA = hppPython/main.html

kwsPlusdir = $(datadir)/doc/hppDoc/kwsPlus
kwsPlus_DATA = kwsPlus/main.html

hppCoredir = $(datadir)/doc/hppDoc/hppCore
hppCore_DATA = hppCore/main.html

hppModeldir = $(datadir)/doc/hppDoc/hppModel
hppModel_DATA = hppModel/main.html

hppCmpPlannerdir = $(datadir)/doc/hppDoc/hppCmpPlanner
hppCmpPlanner_DATA = hppCmpPlanner/main.html

hppWalkPlannerdir = $(datadir)/doc/hppDoc/hppWalkPlanner
hppWalkPlanner_DATA = hppWalkPlanner/main.html

hppLoadir = $(datadir)/doc/hppDoc/hppLoa
hppLoa_DATA = hppLoa/main.html

hppEnvGeneratordir = $(datadir)/doc/hppDoc/hppEnvGenerator
hppEnvGenerator_DATA = hppEnvGenerator/main.html

hppVisualizeMovePlannerdir = $(datadir)/doc/hppDoc/hppVisualizeMovePlanner
hppVisualizeMovePlanner_DATA = hppVisualizeMovePlanner/main.html

hppTutorialPlannerdir = $(datadir)/doc/hppDoc/hppTutorialPlanner
hppTutorialPlanner_DATA = hppTutorialPlanner/main.html

abstractRobotsDynamicsdir = $(datadir)/doc/hppDoc/abstractRobotsDynamics
abstractRobotsDynamics_DATA = abstractRobotsDynamics/main.html

dynamicsJRLJapandir = $(datadir)/doc/hppDoc/dynamicsJRLJapan
dynamicsJRLJapan_DATA = dynamicsJRLJapan/main.html

walkGenJRLdir = $(datadir)/doc/hppDoc/walkGenJRL
walkGenJRL_DATA = walkGenJRL/main.html

abstractGikTaskdir = $(datadir)/doc/hppDoc/abstractGikTask
abstractGikTask_DATA = abstractGikTask/main.html

hppGikdir = $(datadir)/doc/hppDoc/hppGik
hppGik_DATA = hppGik/main.html

hppCorbaServerdir = $(datadir)/doc/hppDoc/hppCorbaServer
hppCorbaServer_DATA = hppCorbaServer/main.html

hppOpenHRPdir = $(datadir)/doc/hppDoc/hppOpenHRP
hppOpenHRP_DATA = hppOpenHRP/main.html

kppInterfacedir = $(datadir)/doc/hppDoc/kppInterface
kppInterface_DATA = kppInterface/main.html

kppInterfaceWalkdir = $(datadir)/doc/hppDoc/kppInterfaceWalk
kppInterfaceWalk_DATA = kppInterfaceWalk/main.html

kppInterfaceHRPdir = $(datadir)/doc/hppDoc/kppInterfaceHRP
kppInterfaceHRP_DATA = kppInterfaceHRP/main.html

kppInterfaceCmpdir = $(datadir)/doc/hppDoc/kppInterfaceCmp
kppInterfaceCmp_DATA = kppInterfaceCmp/main.html

kppInterfaceTutorialdir = $(datadir)/doc/hppDoc/kppInterfaceTutorial
kppInterfaceTutorial_DATA = kppInterfaceTutorial/main.html

